k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-app-svc
spec:
  selector:
    app: search-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
