k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - thiago-ace-test.ezops.cloud
    secretName: search-app-tls
  rules:
  - host: thiago-ace-test.ezops.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: search-app-svc
            port:
              number: 80
